--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-<title></title>
+<title>mi pagina </title>
 </head>
 <body>
-
+    <h1>mi primera pagina </h1>
 </body>
 </html>
